# aibots

./: .env.example  .gitignore  README.md  netlify.toml  pyproject.toml  render.yaml  requirements.txt
aibots/: __init__.py  __main__.py  api.py  cli.py  journal.py  preflight.py  schemas.py
aibots/agent/: __init__.py  critic.py  executor.py  loop.py  market_chat.py
aibots/tools/: __init__.py  alphavantage.py  bigdata.py  indicators.py  market_data.py  massive.py  news.py
docs/: DESK_INTEGRATION.md  DNS.md  SECRETS.md
docs/superpowers/plans/: 2026-07-19-indie-trader-site-next-level.md
docs/superpowers/specs/: 2026-07-19-indie-trader-site-next-level-design.md
scripts/: render_deploy.py  start_desk_api.py
site/: 404.html  desk.html  index.html
tests/: test_agent_loop.py  test_alphavantage.py  test_api.py  test_bigdata.py  test_cli.py  test_indicators.py  test_journal.py  test_market_chat.py  test_market_data.py  test_massive.py  test_news.py  test_preflight.py  test_schemas.py  test_site_content.py
