[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aibots"
version = "0.1.0"
description = "Research brain for a paper-trading desk: proposes trades, never submits orders."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "httpx>=0.27",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["aibots*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
