[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aibots"
version = "0.2.0"
description = "Indie Trader research brain: market Q&A, paper proposals, never submits orders."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "httpx>=0.27",
    "openai>=1.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "bigdata-client>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
aibots = "aibots.cli:main"

[tool.setuptools.packages.find]
include = ["aibots*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
